--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,9 @@
         "vlucas/phpdotenv": "~2.2",
         "mailgun/mailgun-php": "^2.3",
         "php-http/curl-client": "^1.7",
-        "guzzlehttp/psr7": "^1.4"
+        "guzzlehttp/psr7": "^1.4",
+        "illuminate/mail": "^5.4",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
